--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,6 +17,9 @@ messages:
   EOL: "&eВаша версия скоро перестанет поддерживаться. Рекомендуем обновить клиент до более новой версии."
   Unsupported: "&cВаша версия больше не поддерживается, и может быть отключена в любой момент. Играйте на ней на свой страх и риск!"
 
+# Delay of a message (in seconds). Minimum is 1 second // Задержка сообщение (в секундах). Минимум - 1 секунда
+message-delay: 2
+
 message-sound:
   enabled: true
   sound:
